# sfxr-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: sample.rs  setup.rs  wave_type.rs
examples/: cpal.rs  simple.rs
src/: generator.rs  lib.rs
