[package]
name = "sfxr"
version = "0.1.4"
edition = "2018"
authors = ["Teemu Erkkola <teemu.erkkola@iki.fi>"]

description = "Reimplementation of DrPetter's 'sfxr' sound effect generator"
repository = "https://github.com/bzar/sfxr-rs"
documentation = "https://docs.rs/sfxr/"

license = "MIT"
keywords = ["sfx","sound","effect"]
categories = ["multimedia::audio"]

[dependencies]
rand = "0.6"

[dev-dependencies]
sdl2 = "0.34.5"                         # SDL2 bindings for Rust
cpal = "0.11.0"
criterion = { version = "0.3.5", features = ["html_reports"] }

[[bench]]
name = "setup"
harness = false

[[bench]]
name = "sample"
harness = false

[[bench]]
name = "wave_type"
harness = false
